postCSS/dev/mixins/_ratio.css
@define-mixin aspect-ratio $width, $height{
  position: relative;
  &:before{
    display: block;
    content: "";
    width: 100%;
    padding-top: calc(($height / $width) * 100%)}
  > .ratio-content{
    position: absolute;
    top: 0; right: 0;
    bottom: 0; left: 0}
}

